# Watched-It

./: .dockerignore  README.md  Watched-It.postman_collection.json  docker-compose.yml
.github/workflows/: keep_alive.yml  main.yml
api/: .env.example  Dockerfile  Dockerfile.dev  README.md  nodemon.json  package-lock.json  package.json  tsconfig.json  tsconfig.prod.json
api/src/: main.ts
api/src/app/: app.module.ts  app.service.ts
api/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts  jwt.strategy.ts
api/src/catalog/: catalog.controller.ts  catalog.module.ts  catalog.service.ts
api/src/chat/: chat.controller.ts  chat.gateway.ts  chat.module.ts  chat.service.ts  test.html
api/src/config/: db.ts  mail.ts
data/: .gitignore  README.md  db.py  loadData.py  loadMovies.py  loadUsers.py  main.py  pyproject.toml
data/generators/: movieEmbeddings.py  showEmbeddings.py  usersInfo.py
data/loaders/: loadMovies.py  loadShows.py
mobile/: .env.example  .gitignore  README.md  app.json  babel.config.js  jest.config.js  metro.config.js  package-lock.json  package.json  splash.tsx  tailwind.config.js  tsconfig.json
mobile/__mocks__/: expo-router.js  react-native-reanimated.js
mobile/app/: _layout.tsx  index.tsx
mobile/constants/: index.ts
mobile/hooks/: ctx.tsx  useStorageState.tsx
mobile/services/: api.ts  auth.service.ts
mobile/tests/: setup-jest.js
shared/: README.md  catalog.schema.ts  diary.schema.ts  list.schema.ts  message.schema.ts  movie.schema.ts  password.schema.ts  recommendation.schema.ts  show.schema.ts  user.schema.ts
(+153 files in other folders)
